# sattrack-cli

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  clean.sh
data/: location.json
data/database/: db.sqlite
data/satdata/: tle.json
include/: CLIDisplay.hpp  Database.hpp  JSONLoader.hpp  Logger.hpp  ObserverManager.hpp  SatelliteUtils.hpp  TLEManager.hpp  TleLoader.hpp  TrackingInfos.hpp  utils.hpp
src/: CLIDisplay.cpp  Database.cpp  JSONLoader.cpp  Logger.cpp  ObserverManager.cpp  SatelliteUtils.cpp  TLEManager.cpp  TleLoader.cpp  TrackingInfos.cpp  main.cpp  utils.cpp
